# multimeta

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yml
src/: downloader.rs  editor.rs  extractors.rs  lib.rs  main.rs  models.rs  renderer.rs  util.rs  writer.rs
src/editor/: mod.rs  readline.rs
src/extractors/: melon.rs  mod.rs  mora.rs  up_front_works.rs
src/models/: album.rs  mod.rs  name.rs  song.rs
src/models/album/: builder.rs  kind.rs
src/models/song/: builder.rs
src/templates/: album.toml.hbs  song.toml.hbs  tracklist.toml.hbs
src/util/: http.rs  inflector.rs  jpeg.rs  mod.rs
test/fixtures/: melon-10123637.html  melon-10123637.json  mora-43000001-4547366347050.json
test/snapshots/: album.toml  tracklist.toml
tests/fixtures/: mora-43000001-4547366347050.html  up-front-works-epce-7387.html
tests/snapshots/: album.toml  song.toml  tracklist.toml
