[package]
name = "multimeta"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
chrono = "0.4.0"
clap = "2.30.0"
env_logger = "0.6.0"
glob = "0.3.0"
handlebars = "1.0.5"
hangeul = { git = "https://github.com/zaeleus/hangeul.git" }
git-testament = "0.1.4"
lazy_static = "1.0.0"
libc = "0.2.37"
log = "0.4.1"
pbr = "1.0.0"
regex = "1.0.5"
reqwest = "0.9.2"
select = "0.4.2"
serde = { version = "1.0.27", features = ["derive"] }
serde_json = "1.0.9"
unidecode = "0.3.0"
uuid = { version = "0.7.1", features = ["v4"] }
