[package]
name = "multimeta"
version = "0.3.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
chrono = "0.4.0"
clap = "2.30.0"
env_logger = "0.7.0"
glob = "0.3.0"
handlebars = "3.0.1"
hangeul = { git = "https://github.com/zaeleus/hangeul.git", rev = "8e234f9ad0133b9e1d548b76582ff9a0070acf1c" }
git-testament = "0.1.4"
libc = "0.2.37"
log = "0.4.1"
once_cell = "1.0.2"
pbr = "1.0.0"
regex = "1.0.5"
reqwest = { version = "0.10.1", default-features = false, features = ["blocking", "rustls-tls"] }
rustyline = "6.0.0"
select = "0.4.2"
serde = { version = "1.0.27", features = ["derive"] }
serde_json = "1.0.9"
unidecode = "0.3.0"
uuid = { version = "0.8.1", features = ["v4"] }
